更新示例配置

--- a/example-config.ini
+++ b/example-config.ini
@@ -8,30 +8,31 @@ task_name = task3
 
 ;企微机器人配置
 [weixin]
-RoBot_key = d8aa43ed-319d-429a-9bad-4ef008017eb2
+RoBot_key = ****************
 
 
 ;------------------------------------------数据库配置列表--------------------------------------
 
-[wanxinxinli_cloud_prod]
-host = rm-uf6z43x87irap47nhuo.mysql.rds.aliyuncs.com
-database = wanxinxinli_cloud_prod
-user = zuoruining
-password = jhs&4532*325
+[your_database1]
+host = your_host
+database = your_database
+user = you_name
+password = your_password
 
 
-[cloud2.0]
-host = localhost
-database = cloud2.0
-user = root
-password = root
+[your_database1]
+host = your_host
+database = your_database
+user = you_name
+password = your_password
 
 
-[flask_demo]
-host = localhost
-database = flask_demo
-user = root
-password = root
+[your_database3]
+host = your_host
+database = your_database
+user = you_name
+password = your_password
+
 
 ;------------------------------------------任务列表--------------------------------------
 
