更新配置文件
Signed-off-by: zuorn <zuorn@qq.com>

--- a/example-config.ini
+++ b/example-config.ini
@@ -69,13 +69,13 @@ export_data =./output/task1.xlsx
 
 [task3]
 ;name 为导出excel文件名称
-name = 趣味测评参与人员
+name = task3
 
 ;执行 sql 数据库名称
-db = wanxinxinli_cloud_prod
+db = your_database3
 ;sql 查询语句路径
-sql = ./sql/趣味测评参与人员.sql
+sql = ./sql/task3.sql
 
 
 ;导出excel文件路径
-export_data =./output/趣味测评参与人员.xlsx
+export_data = ./output/task3.xlsx
