--- a/example-config.ini
+++ b/example-config.ini
@@ -1,40 +1,37 @@
 ;指定运行任务
-
-;任务配置
 [task_config]
 ;指定运行的任务列表
-task_name = task3
+task_name = task1
 
 
 ;企微机器人配置
 [weixin]
-RoBot_key = ****************
+RoBot_key = **************
 
 
-;------------------------------------------数据库配置列表--------------------------------------
+;------------------------------------------数据库配置列表-----------------------------------
 
-[your_database1]
+[db1]
 host = your_host
 database = your_database
-user = you_name
+user = your_user
 password = your_password
 
 
-[your_database1]
+[db2]
 host = your_host
 database = your_database
-user = you_name
+user = your_user
 password = your_password
 
 
-[your_database3]
-host = your_host
+[db3]
+host = localhost
 database = your_database
-user = you_name
+user = your_user
 password = your_password
 
-
-;------------------------------------------任务列表--------------------------------------
+;------------------------------------------任务列表----------------------------------------
 
 ;任务配置列表
 
@@ -43,32 +40,33 @@ password = your_password
 name = test
 
 ;执行 sql 数据库名称
-db = cloud2.0
+db = db1
 ;sql 查询语句路径
 sql = ./sql/test.sql
 
 
-;--------------------------------------------------------------------------------
+
+;------------------------------------------------------------------------------------------
 
 [task1]
 ;name 为导出excel文件名称
 name = task1
 
 ;执行 sql 数据库名称
-db = flask_demo
+db = db2
 ;sql 查询语句路径
 sql = ./sql/task1.sql
 
 
-;--------------------------------------------------------------------------------
+;------------------------------------------------------------------------------------------
 
 [task3]
 ;name 为导出excel文件名称
-name = task3
+name = 趣味测评参与人员
 
 ;执行 sql 数据库名称
-db = your_database3
+db = db3
 ;sql 查询语句路径
-sql = ./sql/task3.sql
+sql = ./sql/趣味测评参与人员.sql
 
 
