--- a/example-config.ini
+++ b/example-config.ini
@@ -1,72 +1,92 @@
+;------------------------------------------指定运行任务列表----------------------------------
+
 ;指定运行任务
 [task_config]
 ;指定运行的任务列表
-task_name = task1
+task_name = task1,task2,task3
 
 
-;企微机器人配置
-[weixin]
-RoBot_key = **************
 
+;------------------------------------------企微机器人配置列表---------------------------------
+;企微机器人配置列表
+[Robot1]
+RoBot_key = ******************
+
+[Robot2]
+RoBot_key = ******************
+
+[Robot3]
+RoBot_key = ******************
 
 ;------------------------------------------数据库配置列表-----------------------------------
 
-[db1]
-host = your_host
-database = your_database
-user = your_user
-password = your_password
-
-
-[db2]
-host = your_host
-database = your_database
-user = your_user
-password = your_password
-
-
-[db3]
+[xxl_job]
 host = localhost
-database = your_database
-user = your_user
-password = your_password
+database = xxl_job
+user = root
+password = root
+
+
+[cloud2.0]
+host = localhost
+database = cloud2.0
+user = root
+password = root
+
+
+[flask_demo]
+host = localhost
+database = flask_demo
+user = root
+password = root
 
 ;------------------------------------------任务列表----------------------------------------
 
 ;任务配置列表
 
-[task]
+[task1]
 ;name 为导出excel文件名称
-name = test
+name = 任务1
+
+;指定发送消息的机器人
+Robot = Robot1
 
 ;执行 sql 数据库名称
-db = db1
+db = cloud2.0
+
 ;sql 查询语句路径
-sql = ./sql/test.sql
+sql = ./sql/任务1.sql
 
 
 
 ;------------------------------------------------------------------------------------------
 
-[task1]
+[task2]
 ;name 为导出excel文件名称
-name = task1
+name = 任务2
+
+;指定发送消息的机器人
+Robot = Robot2
 
 ;执行 sql 数据库名称
-db = db2
+db = flask_demo
+
 ;sql 查询语句路径
-sql = ./sql/task1.sql
+sql = ./sql/任务2.sql
 
 
 ;------------------------------------------------------------------------------------------
 
 [task3]
 ;name 为导出excel文件名称
-name = 趣味测评参与人员
+name = 任务3
+
+;指定发送消息的机器人
+Robot = Robot3
 
 ;执行 sql 数据库名称
-db = db3
+db = xxl_job
 ;sql 查询语句路径
-sql = ./sql/趣味测评参与人员.sql
+sql = ./sql/任务3.sql
 
 
