添加日志文件，添加截止日期

--- a/config.ini
+++ b/config.ini
@@ -10,13 +10,13 @@ task_name = task1,task2,task3
 ;------------------------------------------企微机器人配置列表---------------------------------
 ;企微机器人配置列表
 [Robot1]
-RoBot_key = ******************
+RoBot_key = d8aa43ed-319d-429a-9bad-4ef008017eb2
 
 [Robot2]
-RoBot_key = ******************
+RoBot_key = d8aa43ed-319d-429a-9bad-4ef008017eb2
 
 [Robot3]
-RoBot_key = ******************
+RoBot_key = d8aa43ed-319d-429a-9bad-4ef008017eb2
 
 ;------------------------------------------数据库配置列表-----------------------------------
 
@@ -57,6 +57,8 @@ db = cloud2.0
 ;sql 查询语句路径
 sql = ./sql/任务1.sql
 
+;截止日期
+end_date = 2024-10-24
 
 
 ;------------------------------------------------------------------------------------------
@@ -74,6 +76,9 @@ db = flask_demo
 ;sql 查询语句路径
 sql = ./sql/任务2.sql
 
+;截止日期
+end_date = 2024-10-07
+
 
 ;------------------------------------------------------------------------------------------
 
@@ -86,7 +91,11 @@ Robot = Robot3
 
 ;执行 sql 数据库名称
 db = xxl_job
+
 ;sql 查询语句路径
 sql = ./sql/任务3.sql
+
+;截止日期
+end_date = 2024-10-08
 
 
