添加执行日期逻辑

--- a/config.ini
+++ b/config.ini
@@ -58,7 +58,10 @@ db = cloud2.0
 sql = ./sql/任务1.sql
 
 ;截止日期
-end_date = 2024-10-24
+; end_date = 2024-10-24
+
+; 指定执行日期，多个日期用逗号分隔
+execution_date = 2024-10-09,2024-10-10,2024-10-11
 
 
 ;------------------------------------------------------------------------------------------
@@ -77,7 +80,7 @@ db = flask_demo
 sql = ./sql/任务2.sql
 
 ;截止日期
-end_date = 2024-10-07
+end_date = 2024-10-13
 
 
 ;------------------------------------------------------------------------------------------
